--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
 .calendar {
     border: 2px solid black;
     border-spacing: 5px;
+    width: 100%;
+    height: 100vh;
 }
 
 .calendar td {
@@ -15,7 +22,19 @@
 }
 
 .calendar-inputs {
-    width: 50px;
+    height: 100%;
+    width: 40%;
+    text-align: center;
+}
+
+#calendarGoToButton {
+    width: 15%;
+    height: 100%;
+}
+
+.calendar-day-title {
+    font-size: 2em;
+    text-align: center;
 }
 
 .today {
